# WatchTower

./: INSTALL.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  status.md  webcam_feed.py  webcam_gui.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general-issue.md  question-or-discussion.md
watchtower/: __init__.py  main.py
watchtower.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
watchtower/core/: __init__.py  camera.py  detection.py  recording.py
watchtower/gui/: __init__.py  main_window.py  settings.py  wizard.py
watchtower/utils/: __init__.py  app_info.py  config.py  video.py
webcam_monitor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
